--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\tcnlu\\Main\\ULP\\Laboratorio 1\\mariadb-java-client-2.3.0.jar
-user.properties.file=C:\\Users\\tcnlu\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\Santi\\AppData\\Roaming\\NetBeans\\15\\build.properties
