--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,11 +31,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/UniversidadG8.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=src\\recursos\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Santi\\Documents\\mariadb-java-client-2.3.0.jar
+file.reference.mysql-connector-java-8.0.30.jar=src\\recursos\\mysql-connector-java-8.0.30.jar
+file.reference.src-recursos=src\\recursos
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-2.3.0.jar}
+    ${file.reference.mariadb-java-client-2.3.0.jar}:\
+    ${file.reference.src-recursos}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-java-8.0.30.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
