--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 compile.on.save=true
-file.reference.jcalendar-1.4.jar=C:\\Users\\tcnlu\\Documents\\GitHub\\UniversidadG8\\src\\recursos\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\tcnlu\\Documents\\GitHub\\UniversidadG8\\src\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\tcnlu\\Main\\ULP\\Laboratorio 1\\mariadb-java-client-2.3.0.jar
-file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\tcnlu\\Documents\\GitHub\\UniversidadG8\\src\\recursos\\mysql-connector-java-8.0.30.jar
-file.reference.src-recursos=C:\\Users\\tcnlu\\Documents\\GitHub\\UniversidadG8\\src\\recursos
+file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\tcnlu\\Documents\\GitHub\\UniversidadG8\\src\\mysql-connector-java-8.0.30.jar
+file.reference.src-recursos=C:\\Users\\tcnlu\\Documents\\GitHub\\UniversidadG8\\src\\jcalendar-1.4.jar
 user.properties.file=C:\\Users\\Santi\\AppData\\Roaming\\NetBeans\\15\\build.properties
