--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=UniversidadG8
+application.vendor=tcnlu
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,18 +31,16 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/UniversidadG8.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=src\\recursos\\jcalendar-1.4.jar
-file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Santi\\Documents\\mariadb-java-client-2.3.0.jar
-file.reference.mysql-connector-java-8.0.30.jar=src\\recursos\\mysql-connector-java-8.0.30.jar
+file.reference.mariadb-java-client-2.3.0.jar=src\\mariadb-java-client-2.3.0.jar
 file.reference.src-recursos=src\\recursos
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-2.3.0.jar}:\
     ${file.reference.src-recursos}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-java-8.0.30.jar}
+    ${file.reference.mariadb-java-client-2.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,6 +61,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -70,6 +70,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=UniversidadG8
 main.class=universidadg8.UniversidadG8
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
