Sacando parametro a executeUpdate() en clases InscripcionData y AlumnoData
Modificación recomendada por profe Luis

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -7,4 +7,4 @@ file.reference.src-recursos=C:\\Users\\tcnlu\\Documents\\GitHub\\UniversidadG8\\
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Santi\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\tcnlu\\AppData\\Roaming\\NetBeans\\13\\build.properties
