--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,13 +34,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=src\\recursos\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=D:\\Descargas\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=src\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-1=C:\\Users\\Santi\\Documents\\mariadb-java-client-2.3.0.jar
 file.reference.src-recursos=src\\recursos
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.src-recursos}:\
-    ${file.reference.mariadb-java-client-2.3.0.jar}
+    ${file.reference.mariadb-java-client-2.3.0.jar}:\
+    ${file.reference.mariadb-java-client-2.3.0.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
