--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,8 +35,10 @@ endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=src\\recursos\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=D:\\Descargas\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Program Files\\Java\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=src\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=C:\\Users\\Santi\\Documents\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-2=C:\\Program Files\\Java\\mariadb-java-client-2.3.0.jar
 file.reference.src-recursos=src\\recursos
 includes=**
 jar.compress=false
@@ -44,7 +46,9 @@ javac.classpath=\
     ${file.reference.src-recursos}:\
     ${file.reference.mariadb-java-client-2.3.0.jar}:\
     ${file.reference.mariadb-java-client-2.3.0.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-2}:\
+    ${file.reference.mariadb-java-client-2.3.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
