--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,9 +4,11 @@ do.jar=true
 do.jlink=false
 file.reference.jcalendar-1.4.jar=C:\\Users\\tcnlu\\Documents\\GitHub\\UniversidadG8\\src\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\tcnlu\\Documents\\GitHub\\UniversidadG8\\src\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Users\\tcnlu\\Documents\\GitHub\\UniversidadG8\\src\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=C:\\Users\\tcnlu\\Documents\\GitHub\\UniversidadG8\\src\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-2=C:\\Users\\tcnlu\\Documents\\GitHub\\UniversidadG8\\src\\mariadb-java-client-2.3.0.jar
 file.reference.src-recursos=C:\\Users\\tcnlu\\Documents\\GitHub\\UniversidadG8\\src\\jcalendar-1.4.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Santi\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\tcnlu\\AppData\\Roaming\\NetBeans\\13\\build.properties
