--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,9 +36,11 @@ excludes=
 file.reference.jcalendar-1.4.jar=src\\recursos\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=D:\\Descargas\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=C:\\Program Files\\Java\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-3=C:\\Program Files\\Java\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=src\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=C:\\Users\\Santi\\Documents\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-2=C:\\Program Files\\Java\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-3=C:\\Program Files\\Java\\mariadb-java-client-2.3.0.jar
 file.reference.src-recursos=src\\recursos
 includes=**
 jar.compress=false
@@ -48,7 +50,9 @@ javac.classpath=\
     ${file.reference.mariadb-java-client-2.3.0.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
-    ${file.reference.mariadb-java-client-2.3.0.jar-2}
+    ${file.reference.mariadb-java-client-2.3.0.jar-2}:\
+    ${file.reference.mariadb-java-client-2.3.0.jar-3}:\
+    ${file.reference.jcalendar-1.4.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
