--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,11 +38,13 @@ file.reference.jcalendar-1.4.jar-1=D:\\Descargas\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=C:\\Program Files\\Java\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-3=C:\\Program Files\\Java\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-4=C:\\Program Files\\Java\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-5=C:\\Program Files\\Java\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=src\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=C:\\Users\\Santi\\Documents\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-2=C:\\Program Files\\Java\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-3=C:\\Program Files\\Java\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-4=C:\\Program Files\\Java\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-5=C:\\Program Files\\Java\\mariadb-java-client-2.3.0.jar
 file.reference.src-recursos=src\\recursos
 includes=**
 jar.compress=false
@@ -56,7 +58,9 @@ javac.classpath=\
     ${file.reference.mariadb-java-client-2.3.0.jar-3}:\
     ${file.reference.jcalendar-1.4.jar-3}:\
     ${file.reference.jcalendar-1.4.jar-4}:\
-    ${file.reference.mariadb-java-client-2.3.0.jar-4}
+    ${file.reference.mariadb-java-client-2.3.0.jar-4}:\
+    ${file.reference.jcalendar-1.4.jar-5}:\
+    ${file.reference.mariadb-java-client-2.3.0.jar-5}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
